<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="btn_seek_string">刻度</string>
    <string name="btn_search_string">搜存</string>
    <string name="btn_eq_music_string">音乐厅</string>
    <string name="btn_eq_film_string">电影院</string>
    <string name="btn_eq_normal_string">标&#160;&#160;&#160;&#160;准</string>
    <string name="btn_bar_radio">Radio</string>
    <string name="btn_bar_btmusic">蓝牙音乐</string>
    <string name="btn_bar_ipod">IPOD</string>
    <string name="btn_bar_usb">U盘音乐</string>
    <string name="app_name">收音机</string>
    <string name="main_favorited">已收藏</string>
    <string name="collect">收藏成功</string>
    <string name="canclecollect">取消收藏</string>
    <string name="peogress_no_channel">当前已无下一强信号台</string>
    <string name="peogress_no_channel1">当前已无上一强信号台</string>
    <string name="search">输入搜索</string>
    <string name="band1">本地</string>
    <string name="band2">远程</string>
    <string name="fm1">FM1</string>
    <string name="fm2">FM2</string>
    <string name="fm3">FM3</string>
    <string name="am1">AM1</string>
    <string name="am2">AM2</string>
    <string name="st">ST</string>
    <string name="initfreq">87.5</string>
    <string name="amsign">KHz</string>
    <string name="fmsign">MHz</string>
    <string name="ensure">确定</string>
    <string name="cancle">取消</string>
    <string name="toast1">请输入正确的频道(522&#8211;1620)</string>
    <string name="toast2">请输入正确的频道(87.5&#8211;108.0)</string>
    <string name="toast3">输入有误</string>
    <string name="toast4">请输入频道</string>
    <string name="nochennel">没有电台记录</string>
    <string name="ensuredelete">请确认是否移除频道？</string>
    <string name="ensureadd">请确认是否收藏频道？</string>
    <string name="initchann">正在搜索频道,请稍等&#8230;</string>
    <string name="listdialognone">No station</string>
    <string name="singlesave0">已成功存台</string>
    <string name="singlesave1">还在为您保存上一个，请稍等</string>
    <string name="singlesave2">这个台已经存过了</string>
    <string name="singlesavedialogtext">请确认是否保存当前频道</string>
    <string name="band_switch">Band</string>
    <string name="radio_update">Update</string>
    <string name="radio_preview">Preview</string>
    <string name="collection1">Rreset1</string>
    <string name="collection2">Rreset2</string>
    <string name="collection3">Rreset3</string>
    <string name="collection4">Rreset4</string>
    <string name="collection5">Rreset5</string>
    <string name="collection6">Rreset6</string>
    <string name="collection7">Rreset7</string>
    <string name="collection8">Rreset8</string>
    <string name="collection9">Rreset9</string>
    <string name="collection10">Rreset10</string>
    <string name="collection11">Rreset11</string>
    <string name="collection12">Rreset12</string>
    <string name="collection13">Rreset13</string>
    <string name="collection14">Rreset14</string>
    <string name="collection15">Rreset15</string>
    <string name="collection16">Rreset16</string>
    <string name="collection17">Rreset17</string>
    <string name="collection18">Rreset18</string>
    <string name="collection_success">Added</string>
    <string name="search_radio">Searching…&#8230;</string>
    <string name="txt_answer">通话</string>
    <string name="txt_hangup">挂断</string>
    <string name="txt_iscalling">正在呼叫&#8230;</string>
    <string name="already_collected">Rreset %d added！</string>
    <string name="first_scan">首次进入，正在为您扫描！</string>

</resources>